core test pass